log
ju., 21 de abr. de 2022 15:54:12: 
 treemap.c | 34 +++++++++++++++++++++++-----------
 1 file changed, 23 insertions(+), 11 deletions(-)
 tests:  4|7
total_score: 5/70
3d11519
ju., 21 de abr. de 2022 16:07:29: 
 treemap.c | 20 ++++++++++++++++++++
 1 file changed, 20 insertions(+)
 tests:  6|7
total_score: 5/70
1310410
ju., 21 de abr. de 2022 16:08:31: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
480e9f4
ju., 21 de abr. de 2022 16:11:20: 
 treemap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function 'insertTreeMap':
treemap.c:54:16: error: 'return' with a value, in function returning void [-Werror]
         return NULL;
                ^~~~
treemap.c:50:6: note: declared here
 void insertTreeMap(TreeMap * tree, void* key, void * value)
      ^~~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
7e2349f
ju., 21 de abr. de 2022 16:11:42: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:0:
treemap.c: In function 'insertTreeMap':
treemap.c:54:16: error: 'return' with a value, in function returning void [-Werror]
         return NULL;
                ^~~~
treemap.c:50:6: note: declared here
 void insertTreeMap(TreeMap * tree, void* key, void * value)
      ^~~~~~~~~~~~~
treemap.c:56:12: error: 'return' with a value, in function returning void [-Werror]
     return NULL;
            ^~~~
treemap.c:50:6: note: declared here
 void insertTreeMap(TreeMap * tree, void* key, void * value)
      ^~~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
0fc6ca9
ju., 21 de abr. de 2022 16:12:03: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  11|6
total_score: 15/70
77234eb
ju., 21 de abr. de 2022 16:25:38: 
 treemap.c | 53 +++++++++++++++++++++++++++++++++++++++++++++++++++--
 1 file changed, 51 insertions(+), 2 deletions(-)
 tests:  13|5
total_score: 25/70
145b463
ju., 21 de abr. de 2022 16:25:57: 
 treemap.c | 10 ----------
 1 file changed, 10 deletions(-)
 tests:  13|5
total_score: 25/70
da23815
ju., 21 de abr. de 2022 16:29:21: 
 treemap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  15|4
total_score: 25/70
0fa2b7e
ju., 21 de abr. de 2022 16:36:51: 
 treemap.c | 23 +++++++++++++++++++++++
 1 file changed, 23 insertions(+)
In file included from test.c:4:0:
treemap.c: In function 'removeNode':
treemap.c:115:33: error: statement with no effect [-Werror=unused-value]
             node->parent->right == NULL;
                                 ^
treemap.c:119:32: error: statement with no effect [-Werror=unused-value]
             node->parent->left == NULL;
                                ^
cc1.exe: all warnings being treated as errors
Compilation failed
857cf1a
ju., 21 de abr. de 2022 16:37:06: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  16|4
total_score: 30/70
66a4cf0
ju., 21 de abr. de 2022 16:40:53: 
 treemap.c | 28 +++++++++++++++++++++++++++-
 1 file changed, 27 insertions(+), 1 deletion(-)
 tests:  17|4
total_score: 35/70
1082108
ju., 21 de abr. de 2022 16:44:08: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
362e178
ju., 21 de abr. de 2022 16:44:45: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
20b4470
ju., 21 de abr. de 2022 16:46:34: 
 treemap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
treemap.c: In function 'removeNode':
treemap.c:158:25: error: too few arguments to function 'createTreeNode'
         TreeNode* aux = createTreeNode(minimum(node->right));
                         ^~~~~~~~~~~~~~
treemap.c:29:12: note: declared here
 TreeNode * createTreeNode(void* key, void * value)
            ^~~~~~~~~~~~~~
Compilation failed
d55923c
ju., 21 de abr. de 2022 16:47:10: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  17|4
total_score: 35/70
321088c
ju., 21 de abr. de 2022 16:52:28: 
 treemap.c | 20 +++++++++++++++++---
 1 file changed, 17 insertions(+), 3 deletions(-)
 tests:  18|3
total_score: 40/70
68b6ce5
ju., 21 de abr. de 2022 16:53:05: 
 treemap.c | 16 +---------------
 1 file changed, 1 insertion(+), 15 deletions(-)
 tests:  18|3
total_score: 40/70
47b5aae
ju., 21 de abr. de 2022 16:56:45: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  20|2
total_score: 45/70
3e8b894
